{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 23,
  "lineage": "553ef897-f87f-1bdf-a6a2-42d853066878",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NI",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/networkInterfaces/NI",
            "internal_domain_name_suffix": "xx5xukxyal5udgl0xwlrtpmsjg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/publicIPAddresses/pip",
                "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-web"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "70-A8-A5-3F-0A-30",
            "name": "NI",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "virtual_machine_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Compute/virtualMachines/VM1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "NI",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "azurerm_public_ip.PIP",
            "module.network.azurerm_subnet.SN",
            "module.network.azurerm_virtual_network.VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/publicIPAddresses/pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.211.17.140",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/networkSecurityGroups/NSG",
            "location": "eastus",
            "name": "NSG",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "103.183.44.181/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "NSG",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSR",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/networkSecurityGroups/NSG/securityRules/allow-https",
            "name": "allow-https",
            "network_security_group_name": "NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-https",
            "network_security_group_name": "NSG",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.NSG"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/networkSecurityGroups/NSG/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "NSG",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "source_address_prefix": "103.183.44.181/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-ssh",
            "network_security_group_name": "NSG",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.NSG"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-app",
            "name": "subnet-app",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "VNET"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-app",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4",
            "virtual_network_name": "VNET"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.VNET"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-db",
            "name": "subnet-db",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "VNET"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-db",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4",
            "virtual_network_name": "VNET"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.VNET"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-web",
            "name": "subnet-web",
            "network_security_group_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/networkSecurityGroups/NSG",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "VNET"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-web",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4",
            "virtual_network_name": "VNET"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.VNET"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "SNSGA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-web",
            "network_security_group_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/networkSecurityGroups/NSG",
            "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.NSG",
            "module.network.azurerm_subnet.SN",
            "module.network.azurerm_virtual_network.VNET"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2a7affbd-02f8-41ff-997a-bd9719bd924e",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET",
            "location": "eastus",
            "name": "VNET",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-web",
                "name": "subnet-web",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/networkSecurityGroups/NSG"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-app",
                "name": "subnet-app",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-cab2c8d8274d44b2/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet-db",
                "name": "subnet-db",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "VNET",
            "resource_group_name": "kml_rg_main-cab2c8d8274d44b2",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          }
        }
      ]
    }
  ]
}